--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -21,8 +23,10 @@
 	    <span class="note">NOTE - Get your left-hand wrist up on the screen to play the Peter Pan song. 
         Get your  right-hand wrist up on the screen toplay Harry Potter Theme song.</span>
   	</h3>
-      <h3 class="btn btn-info" id="song"> Song </h3>
-    </div>
+      <br>
+      <br>
+      <h3 class="btn btn-success" id="song"> Song Name</h3>
+      </div>
 </center>
 
 <script src="main.js"></script>
