--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <center>
   	<h3 class="btn btn-danger heading">AI Music Web App
 	    <br>
-	    <span class="note">NOTE - Get your left-hand wrist up on the screen to play the Peter Pan song. 
-        Get your  right-hand wrist up on the screen toplay Harry Potter Theme song.</span>
+	    <span class="note">NOTE - Get your right-hand wrist up on the screen to play the Peter Pan song. 
+        Get your  left-hand wrist up on the screen toplay Harry Potter Theme song.</span>
   	</h3>
       <br>
       <br>
